// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<DocumentFragment>
  <script
    class="structured_data"
    type="application/ld+json"
  >
    {"@context":"https://schema.org","@type":"SoftwareSourceCode","codeSampleType":"code snippet","text":"mongoimport --db test --collection inventory ^\\n          --authenticationDatabase admin --username &lt;user&gt; --password &lt;password&gt; ^\\n          --drop --file ~\\\\downloads\\\\inventory.crud.json","programmingLanguage":"JavaScript"}
  </script>
  .emotion-0 {
  border-width: 1px;
  border-style: solid;
  border-bottom: none;
  border-top-right-radius: 12px;
  border-top-left-radius: 12px;
  border-color: #E8EDEB;
}

.dark-theme .emotion-0 {
  border-color: #3D4F58;
}

.emotion-1 {
  padding: 10px;
  font-size: 14px;
  margin-left: 5px;
  border-bottom: none;
  color: #5C6C75;
}

.dark-theme .emotion-1 {
  color: #E8EDEB;
}

.emotion-2 {
  border: 1px solid #E8EDEB;
  border-radius: 12px;
  overflow: hidden;
}

.emotion-3 {
  position: relative;
  display: grid;
  grid-template-areas: 'code panel';
  grid-template-columns: auto 38px;
  border-radius: inherit;
  z-index: 0;
}

.emotion-3:before,
.emotion-3:after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  height: 100%;
  width: 40px;
  border-radius: 40%;
  box-shadow: unset;
  -webkit-transition: box-shadow 100ms ease-in-out;
  transition: box-shadow 100ms ease-in-out;
}

.emotion-3:before {
  grid-column: 1;
  left: -40px;
}

.emotion-3:after {
  grid-column: 2;
}

.emotion-4 {
  grid-area: code;
  overflow-x: auto;
  border-radius: inherit;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border: 0;
  padding-top: 8px;
  padding-bottom: 8px;
  margin: 0;
  position: relative;
  -webkit-transition: box-shadow 100ms ease-in-out;
  transition: box-shadow 100ms ease-in-out;
  white-space: pre;
  background-color: #F9FBFA;
  color: #001E2B;
}

@media only screen and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 2) {
  .emotion-4 {
    white-space: pre-wrap;
  }
}

@media only screen and (min-device-width: 813px) and (-webkit-min-device-pixel-ratio: 2) {
  .emotion-4 {
    white-space: pre;
  }
}

.emotion-4:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px #0498EC inset;
}

.emotion-5 {
  color: inherit;
  font-family: 'Source Code Pro',Menlo,monospace;
  font-size: 13px;
  line-height: 20px;
}

.emotion-6 {
  border-spacing: 0;
}

.emotion-7 {
  border-spacing: 0;
  vertical-align: top;
  padding: 0 16px;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  gap: 4px;
  background-color: #FFFFFF;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 6px;
  border-left: solid 1px;
  border-color: #E8EDEB;
  z-index: 2;
  grid-area: panel;
}

.emotion-10 svg {
  width: 16px;
  height: 16px;
}

<div
    css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
  >
    <div>
      <div
        class="emotion-0"
      >
        <div
          class="emotion-1"
        >
          Test Caption
        </div>
      </div>
    </div>
    <div
      class="emotion-2"
    >
      <div
        class="emotion-3"
      >
        <pre
          class="emotion-4"
          tabindex="-1"
        >
          <code
            class="lg-highlight-hljs-light javascript emotion-5"
          >
            <table
              class="emotion-6"
            >
              <tbody>
                <tr
                  class=""
                >
                  <td
                    class="emotion-7"
                  >
                    mongoimport --db test --collection inventory ^
                  </td>
                </tr>
                <tr
                  class=""
                >
                  <td
                    class="emotion-7"
                  >
                              --authenticationDatabase admin --username &lt;user&gt; --password &lt;password&gt; ^
                  </td>
                </tr>
                <tr
                  class=""
                >
                  <td
                    class="emotion-7"
                  >
                              --drop --file ~\\downloads\\inventory.
                    <span
                      class="lg-highlight-property"
                    >
                      crud
                    </span>
                    .
                    <span
                      class="lg-highlight-property"
                    >
                      json
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </code>
        </pre>
        <div
          class="emotion-10"
          data-testid="leafygreen-code-panel"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders correctly when none is passed in as a language 1`] = `
<DocumentFragment>
  <script
    class="structured_data"
    type="application/ld+json"
  >
    {"@context":"https://schema.org","@type":"SoftwareSourceCode","codeSampleType":"code snippet","text":"[{plot A trio of guys try and make up for missed opportunities in childhood by forming a three-player baseball team to compete against standard children baseball squads.}]"}
  </script>
  .emotion-0 {
  border: 1px solid #E8EDEB;
  border-radius: 12px;
  overflow: hidden;
}

.emotion-1 {
  position: relative;
  display: grid;
  grid-template-areas: 'code panel';
  grid-template-columns: auto 38px;
  border-radius: inherit;
  z-index: 0;
}

.emotion-1:before,
.emotion-1:after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  height: 100%;
  width: 40px;
  border-radius: 40%;
  box-shadow: unset;
  -webkit-transition: box-shadow 100ms ease-in-out;
  transition: box-shadow 100ms ease-in-out;
}

.emotion-1:before {
  grid-column: 1;
  left: -40px;
}

.emotion-1:after {
  grid-column: 2;
}

.emotion-2 {
  grid-area: code;
  overflow-x: auto;
  border-radius: inherit;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border: 0;
  padding-top: 8px;
  padding-bottom: 8px;
  margin: 0;
  position: relative;
  -webkit-transition: box-shadow 100ms ease-in-out;
  transition: box-shadow 100ms ease-in-out;
  white-space: pre;
  background-color: #F9FBFA;
  color: #001E2B;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 6px;
  padding-bottom: 6px;
}

@media only screen and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 2) {
  .emotion-2 {
    white-space: pre-wrap;
  }
}

@media only screen and (min-device-width: 813px) and (-webkit-min-device-pixel-ratio: 2) {
  .emotion-2 {
    white-space: pre;
  }
}

.emotion-2:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px #0498EC inset;
}

.emotion-3 {
  color: inherit;
  font-family: 'Source Code Pro',Menlo,monospace;
  font-size: 13px;
  line-height: 20px;
}

.emotion-4 {
  border-spacing: 0;
}

.emotion-5 {
  border-spacing: 0;
  vertical-align: top;
  padding: 0 16px;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  gap: 4px;
  background-color: #FFFFFF;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 6px;
  border-left: solid 1px;
  border-color: #E8EDEB;
  z-index: 2;
  grid-area: panel;
}

.emotion-6 svg {
  width: 16px;
  height: 16px;
}

<div
    css="You have tried to stringify object returned from \`css\` function. It isn't supposed to be used directly (e.g. as value of the \`className\` prop), but rather handed to emotion so it can handle it (e.g. as value of \`css\` prop)."
  >
    <div
      class="emotion-0"
    >
      <div
        class="emotion-1"
      >
        <pre
          class="emotion-2"
          tabindex="-1"
        >
          <code
            class="lg-highlight-hljs-light none emotion-3"
          >
            <table
              class="emotion-4"
            >
              <tbody>
                <tr
                  class=""
                >
                  <td
                    class="emotion-5"
                  >
                    [{plot A trio of guys try and make up for missed opportunities in childhood by forming a three-player baseball team to compete against standard children baseball squads.}]
                  </td>
                </tr>
              </tbody>
            </table>
          </code>
        </pre>
        <div
          class="emotion-6"
          data-testid="leafygreen-code-panel"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
